# rootless-filesystem-management

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
artifacts/: bootstrap-rootfs.ext4  kernel-config
artifacts/test_artifacts/: fs.btrfs  fs.ext4  fs.xfs
src/fs-writer/: Cargo.toml
src/init/: Cargo.toml
