[package]
name = "fs-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
firecracker-spawn = { git = "https://github.com/DavidVentura/firecracker-spawn.git", branch = "master" }
#firecracker-spawn = { path = "/home/david/git/firecracker-spawn"}
memfd = "0.6.4"

[[bin]]
name = "fs-writer"
path = "bin/main.rs"
