[package]
name = "fs-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
# 0.13.1 seems to have broken generation
# https://github.com/aws/aws-lc-rs/issues/348
aws-lc-sys = "=0.13.0"
clap = { version = "4.5.0", features = ["derive"] }
firecracker-spawn = { git = "https://github.com/DavidVentura/firecracker-spawn.git", branch = "master" }
flate2 = "1.0.28"
#firecracker-spawn = { path = "/home/david/git/firecracker-spawn"}
memfd = "0.6.4"
tempfile = "3.10.0"
log = "0.4.20"
simple_logger = "4.3.3"

[[bin]]
name = "fs-writer"
path = "bin/main.rs"
